--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
         function resumeGame() {
             isPaused = false;
             pauseScreen.style.display = 'none';
-            pauseButton.textContent = '⏸';
+            pauseButton.textContent = '||';
             lastFrameTime = performance.now();
         }
         
